nginx-manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-test
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: TCP
      port: 80
      targetPort: 80
